--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -35,20 +35,8 @@ jobs:
         path: |  
           target  
           
-    - name: Get Artifact Link
-      id: get_artifact_link
-      run: |
-         ARTIFACT_ID=$(curl -X GET \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-           "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts")
-
-         echo "Artifact ID: ${ARTIFACT_ID}"
-    - name: Get Artifact URL
-      id: get_artifact_url
-      run: |
-        ARTIFACT_RESPONSE=$(curl -X GET \
-        -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-         "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts")
-
-        ARTIFACT_URL=$(echo $ARTIFACT_RESPONSE | jq -r '.download_url')
-        echo "Artifact URL: ${ARTIFACT_URL}"
+   
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CONTEXT"
