--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -45,4 +45,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: ${{ steps.branch_name.outputs.name }}-v$RESOLVED_VERSION
+          name: ${{ steps.branch_name.outputs.name }} v$RESOLVED_VERSION
