--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -37,8 +37,8 @@ jobs:
         run: |
           #echo "branch = $(basename "${{ github.ref }}")" >> $GITHUB_OUTPUT
           echo "branch = $(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
-          branch_new = $(echo ${GITHUB_REF#refs/heads/})
-          echo "branch_new1=$branch_new" >> $GITHUB_OUTPUT
+          branch1 = $(echo ${GITHUB_REF#refs/heads/})
+          echo "branch_new=$branch1" >> $GITHUB_OUTPUT
           echo "::set-output name=branch_name::$(basename "${{ github.ref }}")"
           echo ${{ steps.branch_name.outputs.branch }}
           echo ${{ steps.branch_name.outputs.branch_name }}
@@ -50,4 +50,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: ${{ steps.branch_name.outputs.branch_new1 }}-${{ steps.branch_name.outputs.branch_name }}v$RESOLVED_VERSION
+          name: ${{ steps.branch_name.outputs.branch_new }}-${{ steps.branch_name.outputs.branch_name }}v$RESOLVED_VERSION
