--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -36,12 +36,12 @@ jobs:
         id: branch_name
         run: |
           #echo "branch = $(basename "${{ github.ref }}")" >> $GITHUB_OUTPUT
-          echo "branch = $(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
-          $branch1 = $(echo ${GITHUB_REF#refs/heads/})
-          echo "branch_new=$branch1" >> $GITHUB_OUTPUT
+          #echo "branch = $(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
+          branch = $(echo ${GITHUB_REF#refs/heads/})
+          echo "branch_new=$branch" >> $GITHUB_OUTPUT
           echo "::set-output name=branch_name::$(basename "${{ github.ref }}")"
-          echo ${{ steps.branch_name.outputs.branch }}
-          echo ${{ steps.branch_name.outputs.branch_name }}
+          #echo ${{ steps.branch_name.outputs.branch }}
+          #echo ${{ steps.branch_name.outputs.branch_name }}
       - uses: release-drafter/release-drafter@v5
         # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
         # with:
